# troll

./: pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  utils.py
core/migrations/: 0001_initial.py  0002_document_ocr_status.py  0002_node_unique title per parent_and_more.py
tests/: test_models.py  test_utils.py
tests/config/: settings.py
